--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "4.15.3",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   }
 }
