--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "express": "4.15.3",
     "http": "0.0.0",
-    "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io": "2.0.3",
+    "socket.io-client": "2.0.3"
   }
 }
