--- a/k8s-graph.yaml
+++ b/k8s-graph.yaml
@@ -9,6 +9,7 @@ spec:
     - protocol: TCP
       port: 3000
       targetPort: 3000
+      nodePort: 30000
   #type: LoadBalancer
   type: NodePort
 ---
