--- a/k8s-graph.yaml
+++ b/k8s-graph.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: k8s-graph
+  namespace: kube-system
 spec:
   selector:
     app: k8s-graph
@@ -17,6 +18,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: k8s-graph
+  namespace: kube-system
 spec:
   replicas: 1
   template:
@@ -24,6 +26,7 @@ spec:
       labels:
         app: k8s-graph
     spec:
+      serviceAccountName: kubernetes-dashboard
       containers:
       - name: k8s-graph
         image: rilleralle/k8s-graph
