--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "http": "0.0.0",
     "socket.io": "2.0.3",
     "socket.io-client": "2.0.3"
+  },
+  "devDependencies": {
+    "mocha": "^5.0.1"
+  },
+  "scripts": {
+    "test": "mocha ./**/test/*.js"
   }
 }
