--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "socket.io-client": "2.0.3"
   },
   "devDependencies": {
-    "mocha": "^5.0.1"
+    "chai": "^4.1.2",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.0.1",
+    "nock": "^9.2.3",
+    "sinon": "^4.4.2"
   },
   "scripts": {
-    "test": "mocha ./**/test/*.js"
+    "test": "mocha './**/*.spec.js'"
   }
 }
