Build docker container and push to DockerHub

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ install:
   - npm install
 script:
   - npm test
+deploy:
+  provider: script
+  script: bash scripts/docker_push.sh
+  on:
+    branch: develop
