--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ script:
   - npm test
 deploy:
   provider: script
-  script: bash docker_push.sh
+  script: bash docker_deploy.sh
   on:
     branch: develop
