--- a/k8s-graph-arm64.yaml
+++ b/k8s-graph-arm64.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: k8s-graph
+  namespace: kube-system
 spec:
   selector:
     app: k8s-graph
@@ -17,6 +18,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: k8s-graph
+  namespace: kube-system
 spec:
   replicas: 1
   template:
